2006-03-26  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-22  Vladimer Sichinava  <vlsichinava@gmail.com>

        * configure.in: Added "ka" (Georgian) to ALL_LINGUAS

2006-03-13  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	* configure.in:

	Released 2.14.0.

2006-03-04  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	
	2.13.93.
	Fixed build of documentation #333295.

2006-02-27  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Released 2.13.92.

2006-01-29  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	* configure.in:
	
	Released 2.13.90.

2006-01-25  Benoît Dejean  <benoit@placenet.org>

	* gnome-system-monitor.desktop.in.in:
	
	Fixed.
	Closes #328581.

2006-01-21  Benoît Dejean  <benoit@placenet.org>

	* gnome-system-monitor.desktop.in.in:
	
	Add GNOME and/or GTK categories of the .desktop file.
	Closes #328020.

2006-01-20  Benoît Dejean  <benoit@placenet.org>

	* src/bacon-message-connection.c: (setup_connection),
	(accept_new_connection), (server_cb), (try_server), (try_client),
	(bacon_message_connection_free):
	* src/bacon-message-connection.h:

	Synced with libbacon.

2006-01-16  Benoît Dejean  <benoit@placenet.org>

	* configure.in: Bumped version number to 2.13.6.

2006-01-16  Frank Arnold  <farnold@cvs.gnome.org>

	* src/procdialogs.c: (procdialog_create_preferences_dialog):
	Fixed I18N issue with "Update interval" labeling.
	Changed packing of "Enable smooth refresh" checkbutton again.
	Closes #327116

2006-01-15  Benoît Dejean  <benoit@placenet.org>

	* NEWS: Released 2.13.5.

2006-01-12  Dennis Cranston  <dennis_cranston@yahoo.com>

	* src/procdialogs.c: (procdialog_create_preferences_dialog):
	Fix layout of the new "Enable smooth refresh" checkbutton.
	* src/proctable.c: (proctable_new):  HIG captalization fix.

2006-01-12  Benoît Dejean  <benoit@placenet.org>

	* Makefile.am:
	* gnome-system-monitor.spec:

	Dropped RPM spec file.
	Closes #162038.