@@ -86,7 +86,7 @@ load_graph_draw (LoadGraph *g)
 	int dely;
 	double delx;
 	int real_draw_height;
-	gint i, j;
+	guint i, j;
 
 	cr = cairo_create (g->buffer);
 
@@ -455,7 +455,7 @@ load_graph_unalloc (LoadGraph *g)
 static void
 load_graph_alloc (LoadGraph *g)
 {
-	int i, j;
+	guint i, j;
 
 	/* Allocate data in a contiguous block */
 	g->data_block = g_new(float, g->n * NUM_POINTS);
@@ -486,7 +486,7 @@ LoadGraph *
 load_graph_new (gint type, ProcData *procdata)
 {
 	LoadGraph *g;
-	gint i = 0;
+	guint i = 0;
 
 	g = g_new0 (LoadGraph, 1);
 
