@@ -1,3 +1,15 @@
+2006-04-07  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/disks.c: (create_disk_view):
+	* src/load-graph.c: (load_graph_draw), (load_graph_alloc),
+	(load_graph_new):
+	* src/memmaps.c: (update_memmaps_dialog):
+	* src/openfiles.c: (update_openfiles_dialog):
+	* src/procman.h:
+	
+	Fixed a bunch of warnings and bumped version number.
+
 2006-03-26  Tommi Vainikainen  <thv@iki.fi>
 
 	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).
